testsuite/tests/annotations/should_fail/annfail09.stderr
annfail09.hs:6:16: error: [GHC-28914]
    • Stage error: ‘g’ is bound at stage {1} but used at stage 0
      Hint: quoting [| g |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the annotation: {-# ANN module g #-}

annfail09.hs:8:18: error: [GHC-28914]
    • Stage error: ‘g’ is bound at stage {1} but used at stage 0
      Hint: quoting [| g |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the annotation: {-# ANN type Foo g #-}

annfail09.hs:11:11: error: [GHC-28914]
    • Stage error: ‘g’ is bound at stage {1} but used at stage 0
      Hint: quoting [| g |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the annotation: {-# ANN f g #-}

